Version 4.9.9 (TBD)
    Fixed `forced_root_block_attrs` setting not applying to new blocks consistently #TINY-4564
Version 4.9.8 (2020-01-28)
    Fixed the `mobile` theme failing to load due to a bundling issue #TINY-4613
    Fixed security issue related to parsing HTML comments and CDATA #TINY-4544
Version 4.9.7 (2019-12-19)
    Fixed the `visualchars` plugin converting HTML-like text to DOM elements in certain cases #TINY-4507
    Fixed an issue with the `paste` plugin not sanitizing content in some cases #TINY-4510
    Fixed HTML comments incorrectly being parsed in certain cases #TINY-4511
Version 4.9.6 (2019-09-02)
    Fixed image browse button sometimes displaying the browse window twice #TINY-3959
Version 4.9.5 (2019-07-02)
    Changed annotations navigation to work the same as inline boundaries #TINY-3396
    Fixed the print plugin printing from the wrong window in IE11 #TINY-3762
    Fixed an exception being thrown when a file or number input has focus during initialization. Patch contributed by t00 #GH-2194
    Fixed positioning of the styleselect menu in iOS while using the mobile theme #TINY-3505
    Fixed native context menu not showing with images in IE11 #TINY-3392
    Fixed selection incorrectly changing when programmatically setting selection on contenteditable false elements #TINY-3766
    Fixed image browse button not working on touch devices #TINY-3751
    Fixed so that nbsp entities aren't trimmed in white-space: pre-line elements #TINY-3642
    Fixed space key properly inserts a nbsp before/after block elements #TINY-3745
    Fixed infinite loop in the paste plugin when IE11 takes a long time to process paste events. Patch contributed by lRawd. #GH-4987
Version 4.9.4 (2019-03-20)
    Fixed an issue where **Home/End** keys wouldn't move the caret correctly before or after `contenteditable=false` inline elements #TINY-2995
    Fixed an issue where content may have been lost when using permanent bookmarks #TINY-3400