@@ -1,4 +1,5 @@
 Version 4.9.9 (TBD)
+    Fixed table selection not functioning correctly in Edge 44 or higher #TINY-3862
     Fixed `forced_root_block_attrs` setting not applying to new blocks consistently #TINY-4564
 Version 4.9.8 (2020-01-28)
     Fixed the `mobile` theme failing to load due to a bundling issue #TINY-4613
